<?xml version="1.0"?>
<package>
  <name>btraj</name>
  <version>0.0.0</version>
  <description>The btraj package</description>
  <maintainer email="jackwqr@126.com">wqr</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
